fix(NavBar): Spacing between buttons

--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -44,7 +44,7 @@
 .settings-root {
   -fx-background-color: white;
   -fx-padding: 12;
-  -fx-border-color: #FFC0CB;
+  -fx-border-color: #FFE5F2;
   -fx-border-width: 8;
   -fx-border-radius: 8;
 }
